updating for Punjabi
(Old svn revision: 25023)

--- a/po/pa.po
+++ b/po/pa.po
@@ -9,9 +9,9 @@ msgstr ""
 "Project-Id-Version: pa\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-02-12 19:47+0100\n"
-"PO-Revision-Date: 2007-01-25 12:59+0530\n"
+"PO-Revision-Date: 2007-02-23 21:39+0530\n"
 "Last-Translator: A S Alam <aalam@users.sf.net>\n"
-"Language-Team: Punjabi <fedora-trans-pa@redhat.com>\n"
+"Language-Team: Punjabi <punjabi-l10n@lists.sf.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -21,12 +21,12 @@ msgstr ""
 #: ../exo/exo-cell-renderer-ellipsized-text.c:138
 #: ../exo/exo-cell-renderer-icon.c:145
 msgid "Follow state"
-msgstr ""
+msgstr "ਹਾਲਤ ਵੇਖੋ"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:139
 #: ../exo/exo-cell-renderer-icon.c:146
 msgid "Render differently based on the selection state."
-msgstr ""
+msgstr "ਚੋਣ ਹਾਲਤ ਦੇ ਢੰਗ ਮੁਤਾਬਕ ਵੱਖਰੇ ਢੰਗ ਨਾਲ ਰੈਡਰ ਕਰੋ।"
 
 #: ../exo/exo-cell-renderer-icon.c:167
 msgid "Icon"
@@ -34,15 +34,15 @@ msgstr "ਆਈਕਾਨ"
 
 #: ../exo/exo-cell-renderer-icon.c:168
 msgid "The icon to render."
-msgstr ""
+msgstr "ਰੈਡਰ ਕਰਨ ਵਾਸਤੇ ਆਈਕਾਨ ਹੈ।"
 
 #: ../exo/exo-cell-renderer-icon.c:189
 msgid "size"
-msgstr "ਸਾਇਜ਼"
+msgstr "ਸਾਈਜ਼"
 
 #: ../exo/exo-cell-renderer-icon.c:190
 msgid "The size of the icon to render in pixels."
-msgstr ""
+msgstr "ਰੈਡਰ ਕਰਨ ਵਾਸਤੇ ਆਈਕਾਨ ਦਾ ਸਾਈਜ਼ ਪਿਕਸਲ 'ਚ।"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:770 ../exo/exo-mount-point.c:205
 #: ../exo/exo-mount-point.c:234 ../exo/exo-mount-point.c:392
@@ -57,10 +57,10 @@ msgstr "ਫਾਇਲ \"%s\" ਪੜ੍ਹਨ ਲਈ ਫੇਲ੍ਹ: %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:873
 #, c-format
-msgid ""
-"Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
+msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
 msgstr ""
-"ਚਿੱਤਰ \"%s\" ਲੋਡ ਕਰਨ ਲਈ ਫੇਲ੍ਹ ਹੈ: ਅਣਜਾਣ ਕਾਰਨ, ਹੋ ਸਕਦਾ ਹੈ ਕਿ ਨਿਕਾਰਾ ਚਿੱਤਰ ਫਾਇਲ ਹੋਵੇ"
+"ਚਿੱਤਰ \"%s\" ਲੋਡ ਕਰਨ ਲਈ ਫੇਲ੍ਹ ਹੈ: ਅਣਜਾਣ ਕਾਰਨ, ਹੋ ਸਕਦਾ ਹੈ ਕਿ ਨਿਕਾਰਾ "
+"ਚਿੱਤਰ ਫਾਇਲ ਹੋਵੇ"
 
 #: ../exo/exo-icon-bar.c:249 ../exo/exo-icon-view.c:783
 msgid "Orientation"
@@ -68,7 +68,7 @@ msgstr "ਸਥਿਤੀ"
 
 #: ../exo/exo-icon-bar.c:250
 msgid "The orientation of the iconbar"
-msgstr ""
+msgstr "ਆਈਕਾਨ-ਬਾਰ ਦੀ ਸਥਿਤੀ"
 
 #: ../exo/exo-icon-bar.c:266 ../exo/exo-icon-view.c:800
 msgid "Pixbuf column"
@@ -80,7 +80,7 @@ msgstr ""
 
 #: ../exo/exo-icon-bar.c:282 ../exo/exo-icon-view.c:927
 msgid "Text column"
-msgstr "ਪਾਠ ਕਾਲਮ"
+msgstr "ਟੈਕਸਟ ਕਾਲਮ"
 
 #: ../exo/exo-icon-bar.c:283 ../exo/exo-icon-view.c:928
 msgid "Model column used to retrieve the text from"
@@ -134,7 +134,7 @@ msgstr "ਐਕਸ਼ਨ ਆਈਕਾਨ"
 #. EXO_ICON_CHOOSER_CONTEXT_ANIMATIONS
 #: ../exo/exo-icon-chooser-dialog.c:87
 msgid "Animations"
-msgstr "ਸਜੀਵ"
+msgstr "ਐਨੀਮੇਸ਼ਨ"
 
 #. EXO_ICON_CHOOSER_CONTEXT_APPLICATIONS
 #: ../exo/exo-icon-chooser-dialog.c:89
@@ -144,22 +144,22 @@ msgstr "ਐਪਲੀਕੇਸ਼ਨ ਆਈਕਾਨ"
 #. EXO_ICON_CHOOSER_CONTEXT_CATEGORIES
 #: ../exo/exo-icon-chooser-dialog.c:91
 msgid "Menu Icons"
-msgstr "ਮੇਨੂ ਇਕਾਈ"
+msgstr "ਮੇਨੂ ਆਈਕਾਨ"
 
 #. EXO_ICON_CHOOSER_CONTEXT_DEVICES
 #: ../exo/exo-icon-chooser-dialog.c:93
 msgid "Device Icons"
-msgstr "ਜੰਤਰ ਆਈਕਾਨ"
+msgstr "ਡੀਵਾਇਸ ਆਈਕਾਨ"
 
 #. EXO_ICON_CHOOSER_CONTEXT_EMBLEMS
 #: ../exo/exo-icon-chooser-dialog.c:95
 msgid "Emblems"
-msgstr ""
+msgstr "ਈਮਬਲੇਮਸ"
 
 #. EXO_ICON_CHOOSER_CONTEXT_EMOTES
 #: ../exo/exo-icon-chooser-dialog.c:97
 msgid "Emoticons"
-msgstr "ਭਾਵ-ਆਈਕਾਨ"
+msgstr "ਈਮੋਸ਼ਨ"
 
 #. EXO_ICON_CHOOSER_CONTEXT_INTERNATIONAL
 #: ../exo/exo-icon-chooser-dialog.c:99
@@ -243,7 +243,7 @@ msgstr "ਲੇਆਉਟ ਢੰਗ"
 
 #: ../exo/exo-icon-view.c:737
 msgid "Margin"
-msgstr "ਹਾਸ਼ੀਆ"
+msgstr "ਮਾਰਜ਼ਨ"
 
 #: ../exo/exo-icon-view.c:738
 msgid "Space which is inserted at the edges of the icon view"
@@ -266,8 +266,7 @@ msgid "The model for the icon view"
 msgstr ""
 
 #: ../exo/exo-icon-view.c:784
-msgid ""
-"How the text and icon of each item are positioned relative to each other"
+msgid "How the text and icon of each item are positioned relative to each other"
 msgstr ""
 
 #: ../exo/exo-icon-view.c:816
@@ -300,7 +299,7 @@ msgstr "ਸਲੈਕਸ਼ਨ ਢੰਗ"
 
 #: ../exo/exo-icon-view.c:863
 msgid "The selection mode"
-msgstr "ਸਕੈਲਸ਼ਨ ਢੰਗ"
+msgstr "ਸਲੈਕਸ਼ਨ ਢੰਗ"
 
 #: ../exo/exo-icon-view.c:878 ../exo/exo-tree-view.c:166
 msgid "Single Click"
@@ -330,7 +329,7 @@ msgstr ""
 
 #: ../exo/exo-icon-view.c:935
 msgid "Selection Box Color"
-msgstr "ਚੋਣ ਬਕਸਾ ਰੰਗ"
+msgstr "ਚੋਣ ਬਾਕਸ ਰੰਗ"
 
 #: ../exo/exo-icon-view.c:936
 msgid "Color of the selection box"
@@ -358,7 +357,7 @@ msgstr "ਬਲਾਕ ਡਿਵਾਇਸ"
 
 #: ../exo/exo-thumbnail-preview.c:304
 msgid "Character Device"
-msgstr "ਕਰੈਟਰ ਡੀਵਾਇਸ"
+msgstr "ਕਰੈਕਟਰ ਡੀਵਾਇਸ"
 
 #: ../exo/exo-thumbnail-preview.c:309
 msgid "Folder"
@@ -451,7 +450,7 @@ msgstr ""
 
 #: ../exo/exo-wrap-table.c:190
 msgid "Homogeneous"
-msgstr "ਹੋਮੋਜੀਨੀਅਸ"
+msgstr "ਹੋਮੋਜ਼ੀਨੀਅਸ"
 
 #: ../exo/exo-wrap-table.c:191
 msgid "Whether the children should be all the same size"
@@ -518,6 +517,11 @@ msgid ""
 "Written by Benedikt Meurer <benny@xfce.org>.\n"
 "\n"
 msgstr ""
+"Copyright (c) %s\n"
+"        os-cillation e.K. ਸਭ ਹੱਕ ਰਾਖਵੇਂ ਹਨ।\n"
+"\n"
+"Benedikt Meurer <benny@xfce.org> ਨੇ ਲਿਖਿਆ\n"
+"\n"
 
 #: ../exo-csource/main.c:252 ../exo-desktop-item-edit/main.c:157
 #: ../exo-mount/main.c:126 ../exo-mount-notify/main.c:171
@@ -536,7 +540,7 @@ msgstr ""
 #: ../exo-open/main.c:137
 #, c-format
 msgid "Please report bugs to <%s>.\n"
-msgstr "ਬੱਗ ਜਾਣਕਾਰੀ %s ਨੂ ਦਿਓ।\n"
+msgstr "ਬੱਗ ਜਾਣਕਾਰੀ %s ਨੂੰ ਦਿਓ।\n"
 
 #. allocate the file chooser
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:290
@@ -1031,7 +1035,7 @@ msgstr "ਡੇਬੀਅਨ X ਟਰਮੀਨਲ ਈਮੁਲੇਟਰ"
 
 #: ../exo-helper/helpers/encompass.desktop.in.in.h:1
 msgid "Encompass"
-msgstr "ਇੰਕੰਪਾਸ"
+msgstr "ਇਨ-ਕੰਪਾਸ"
 
 #: ../exo-helper/helpers/epiphany.desktop.in.in.h:1
 msgid "Epiphany Web Browser"
@@ -1102,9 +1106,8 @@ msgid "Opera Mail"
 msgstr "ਓਪਰਾ ਮੇਲ"
 
 #: ../exo-helper/helpers/sylpheed-claws.desktop.in.in.h:1
-#, fuzzy
 msgid "Claws Mail"
-msgstr "ਮੌਜੀਲਾ ਮੇਲ"
+msgstr "ਕਲਾਵਸ ਮੇਲ"
 
 #: ../exo-helper/helpers/sylpheed.desktop.in.in.h:1
 msgid "Sylpheed"
@@ -1287,8 +1290,8 @@ msgid ""
 "The device \"%s\" is being unmounted by the system. Please do not remove the "
 "media or disconnect the drive."
 msgstr ""
-"ਜੰਤਰ \"%s\" ਨੂੰ ਸਿਸਟਮ ਵਲੋਂ ਅਣ-ਮਾਊਂਟ ਕੀਤਾ ਗਿਆ ਹੈ। ਮੀਡਿਆ ਨੂੰ ਨਾ ਹਟਾਓ ਜਾਂ ਡਰਾਇਵ ਦਾ ਕੁਨੈਕਸ਼ਨ "
-"ਖਤਮ ਨਾ ਕਰੋ।"
+"ਜੰਤਰ \"%s\" ਨੂੰ ਸਿਸਟਮ ਵਲੋਂ ਅਣ-ਮਾਊਂਟ ਕੀਤਾ ਗਿਆ ਹੈ। ਮੀਡਿਆ ਨੂੰ ਨਾ ਹਟਾਓ ਜਾਂ "
+"ਡਰਾਇਵ ਦਾ ਕੁਨੈਕਸ਼ਨ ਖਤਮ ਨਾ ਕਰੋ।"
 
 #. not read-only, writing back data
 #: ../exo-mount-notify/main.c:238
@@ -1317,10 +1320,8 @@ msgid "  -?, --help                          Print this help message and exit"
 msgstr "  -?, --help                          Print this help message and exit"
 
 #: ../exo-open/main.c:63
-msgid ""
-"  -v, --version                       Print version information and exit"
-msgstr ""
-"  -v, --version                       Print version information and exit"
+msgid "  -v, --version                       Print version information and exit"
+msgstr "  -v, --version                       Print version information and exit"
 
 #: ../exo-open/main.c:65
 msgid ""
@@ -1380,5 +1381,3 @@ msgstr ""
 msgid "Failed to open URL \"%s\"."
 msgstr "URL \"%s\" ਖੋਲ੍ਹਣ ਲਈ ਫੇਲ੍ਹ ਹੈ।"
 
-#~ msgid "Sylpheed Claws"
-#~ msgstr "Sylpheed Claws"
