* de.po: Nico Schümann updated the following German translations 		libexo; xfburn; xfce4-panel and xfdesktop * fr.po: Updated the following French translations 		squeeze; xfce4-panel and xfdesktop
(Old svn revision: 25280)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-03-24  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* de.po: Updated the German translation
+	by Nico Schümann <nico@prog.nico22.de>
+
 2007-02-22  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* de.po: Brought some style in the German translation by
