--- a/po/de.po
+++ b/po/de.po
@@ -3,6 +3,7 @@
 # This file is distributed under the same license as the libexo package.
 # Benedikt Meurer <benny@xfce.org>, 2004-2007.
 # Fabian Nowak <timystery@arcor.de>, 2006.
+# Nico Schümann <nico@prog.nico22.de>, 2007.
 #
 msgid ""
 msgstr ""
@@ -206,7 +207,7 @@ msgstr "Spaltenabstand"
 
 #: ../exo/exo-icon-view.c:652
 msgid "Space which is inserted between grid column"
-msgstr "Platz, der zwischen Gitterspalten eingefügt wird"
+msgstr "Zwischen Gitterspalten eingefügter Platz"
 
 #: ../exo/exo-icon-view.c:668
 msgid "Number of columns"
@@ -246,7 +247,7 @@ msgstr "Rand"
 
 #: ../exo/exo-icon-view.c:738
 msgid "Space which is inserted at the edges of the icon view"
-msgstr "Platz, der an den Rändern der Symbolansicht eingefügt wird"
+msgstr "An den Rändern der Symbolansicht eingefügter Platz"
 
 #: ../exo/exo-icon-view.c:754
 msgid "Markup column"
@@ -287,7 +288,7 @@ msgstr "Zeilenabstand"
 
 #: ../exo/exo-icon-view.c:833
 msgid "Space which is inserted between grid rows"
-msgstr "Platz, der zwischen Gitterzeilen eingefügt wird"
+msgstr "Zwischen Gitterzeilen eingefügter Platz"
 
 #: ../exo/exo-icon-view.c:847
 msgid "Search Column"
@@ -331,7 +332,7 @@ msgstr "Abstand"
 
 #: ../exo/exo-icon-view.c:912
 msgid "Space which is inserted between cells of an item"
-msgstr "Platz, der zwischen den Zellen eines Elements eingefügt wird"
+msgstr "Zwischen den Zellen eines Elements eingefügter Platz"
 
 #: ../exo/exo-icon-view.c:935
 msgid "Selection Box Color"
@@ -1135,9 +1136,8 @@ msgid "Opera Mail"
 msgstr "Opera Mail"
 
 #: ../exo-helper/helpers/sylpheed-claws.desktop.in.in.h:1
-#, fuzzy
 msgid "Claws Mail"
-msgstr "Mozilla Mail"
+msgstr "Claws Mail"
 
 #: ../exo-helper/helpers/sylpheed.desktop.in.in.h:1
 msgid "Sylpheed"
