--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-03-25  Daichi Kawahata <daichi@xfce.org>
+
+	* it.po: Fixed an error.
+	* gl.po: Fixed header.
+
 2007-03-24  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* de.po: Updated the German translation
@@ -10,7 +15,7 @@
 
 2007-02-22  Piarres Beobide <pi@beobide.net>
 
-        * eu.po: Updated Basque translation.
+	* eu.po: Updated Basque translation.
 
 2007-02-20  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
@@ -29,7 +34,7 @@
 
 	* ar.po: initial commit.
 	* LINGUAS: adding ar language code
-	
+
 2007-02-07  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* fr.po: Fixed accelerators.
@@ -70,7 +75,7 @@
 2007-01-16  Alexander Nyakhaychyk  <nyakhaychyk@gmail.com>
 
 	* be.po: Updated Belarusian translation.
-	
+
 2007-01-15  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* fr.po: Fixed the French translation.
