--- a/po/it.po
+++ b/po/it.po
@@ -528,7 +528,7 @@ msgid ""
 "Written by Benedikt Meurer <benny@xfce.org>.\n"
 "\n"
 msgstr ""
-"Copyright (c) $s\n"
+"Copyright (c) %s\n"
 "        os-cillation e.K. Tutti i diritti riservati.\n"
 "\n"
 "Scritto da Benedikt Meurer <benny@xfce.org>.\n"
