--- a/po/gl.po
+++ b/po/gl.po
@@ -1,9 +1,8 @@
 # Galician translation for exo
 # Copyright (c) (c) 2006 Canonical Ltd, and Rosetta Contributors 2006
 # This file is distributed under the same license as the exo package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2006.
+# Leandro Regueiro <leandro.regueiro@gmail.com>, 2006.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.2\n"
