* de.po: Nico Schümann minor fixes to the German translations * en_GB.po: Jeff Bailes updated the British English translations for trunk and branches
(Old svn revision: 25327)

--- a/po/de.po
+++ b/po/de.po
@@ -1045,7 +1045,7 @@ msgstr "Xfce 4 Bevorzugte Anwendungen"
 
 #: ../exo-helper/helpers/Terminal.desktop.in.in.h:1
 msgid "Xfce Terminal"
-msgstr "Xfce Terminal"
+msgstr "Xfce-Terminal"
 
 #: ../exo-helper/helpers/aterm.desktop.in.in.h:1
 msgid "aterm"
