--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-03-28  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* de.po: Minor fixes to the German translation
+	by Nico Schümann <nico@prog.nico22.de>
+
 2007-03-27  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* en_GB.po: Updated the British translation
