--- a/po/ca.po
+++ b/po/ca.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-02-12 19:47+0100\n"
-"PO-Revision-Date: 2007-01-14 13:40+0100\n"
+"PO-Revision-Date: 2007-04-05 13:15+0200\n"
 "Last-Translator: Pau Ruŀlan Ferragut <paurullan@bulma.net>\n"
 "Language-Team: Catalan\n"
 "MIME-Version: 1.0\n"
@@ -489,7 +489,7 @@ msgstr "Ús: %s [opcions] [fitxer]\n"
 #: ../exo-csource/main.c:231
 #, c-format
 msgid "       %s [options] --build-list [[name file]...]\n"
-msgstr "       %s [opcions] --build-list [[nom del fitxer]…]\n"
+msgstr "       %s [opcions] --build-list [nom del fitxer]\n"
 
 #: ../exo-csource/main.c:233
 msgid "  -h, --help        Print this help message and exit\n"
@@ -1012,7 +1012,7 @@ msgid ""
 "Emulator now and click OK to proceed."
 msgstr ""
 "Per favor trieu l’emulador de terminal\n"
-"preferit i premeu «D’acord» per seguir"
+"preferit i premeu «d’acord» per seguir"
 
 #: ../exo-helper/exo-helper.c:404
 msgid "No command specified"
@@ -1133,9 +1133,8 @@ msgid "Opera Mail"
 msgstr "Correu d’Opera"
 
 #: ../exo-helper/helpers/sylpheed-claws.desktop.in.in.h:1
-#, fuzzy
 msgid "Claws Mail"
-msgstr "Correu de Mozilla"
+msgstr "Claws"
 
 #: ../exo-helper/helpers/sylpheed.desktop.in.in.h:1
 msgid "Sylpheed"
@@ -1398,7 +1397,6 @@ msgstr ""
 "  TerminalEmulator - L’emulador de terminal preferit."
 
 #: ../exo-open/main.c:82
-#, fuzzy
 msgid ""
 "If you don't specify the --launch option, exo-open will open all specified\n"
 "URLs with their preferred URL handlers. Else, if you specify the --launch\n"
@@ -1422,6 +1420,3 @@ msgstr "No s’ha pogut llançar l’aplicació predeferida de la categoria «%s
 #, c-format
 msgid "Failed to open URL \"%s\"."
 msgstr "No s’ha pogut obrir la URL «%s»"
-
-#~ msgid "Sylpheed Claws"
-#~ msgstr "Sylpheed Claws"
