--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,7 +1,11 @@
+2007-04-07  Daichi Kawahata <daichi@xfce.org>
+
+	* ja.po: Updated Japanese translations.
+
 2007-04-05  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
 	* ca.po: Update Catalan translations
-       
+
 2007-04-05  Alexander Nyakhaychyk  <nyakhaychyk@gmail.com>
 
 	* be.po: Updated Belarusian translation
