Updated Dutch translations
(Old svn revision: 25437)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-08  Stephan Arts <stephan@xfce.org>
+
+	* nl.po: Updated Dutch translations.
+
 2007-04-07  Daichi Kawahata <daichi@xfce.org>
 
 	* ja.po: Updated Japanese translations.
