--- a/po/fr.po
+++ b/po/fr.po
@@ -2,7 +2,7 @@
 # Copyright (C) 2004-2007 os-cillation e.K.
 # This file is distributed under the same license as the libexo package.
 # Stephane Roy <sroy@j2n.net>, 2005-2006.
-# Maximilian Schleiss <maxschleiss@bluewin.ch>, 2006-2007.
+# Maximilian Schleiss <maxschleiss@solnet.ch>, 2006-2007.
 #
 msgid ""
 msgstr ""
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-02-12 19:47+0100\n"
 "PO-Revision-Date: 2007-02-20 19:04+0100\n"
-"Last-Translator: Maximilian Schleiss <maxschleiss@bluewin.ch>\n"
+"Last-Translator: Maximilian Schleiss <maxschleiss@solnet.ch>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
