--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-15  Hydonsingore Cia <hydonsingore@educities.edu.tw>
+
+	* zh_TW.po: File launched, not completed yet.
+
 2007-04-08  Stephan Arts <stephan@xfce.org>
 
 	* nl.po: Updated Dutch translations.
