Fixed typos reported by Jarno Liimatainen in the Finnish translation.
(Old svn revision: 25653)

--- a/po/fi.po
+++ b/po/fi.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-02-12 19:47+0100\n"
-"PO-Revision-Date: 2007-01-11 13:06+0200\n"
+"POT-Creation-Date: 2007-04-28 10:36+0300\n"
+"PO-Revision-Date: 2007-04-28 10:38+0300\n"
 "Last-Translator: Jari Rahkonen <jari.rahkonen@pp1.inet.fi>\n"
 "Language-Team: os-cillation <info@os-cillation.com>\n"
 "MIME-Version: 1.0\n"
@@ -39,10 +39,10 @@ msgstr "koko"
 
 #: ../exo/exo-cell-renderer-icon.c:190
 msgid "The size of the icon to render in pixels."
-msgstr "Piirettävän kuvakkeen koko kuvapisteinä."
+msgstr "Piirrettävän kuvakkeen koko kuvapisteinä."
 
-#: ../exo/exo-gdk-pixbuf-extensions.c:770 ../exo/exo-mount-point.c:205
-#: ../exo/exo-mount-point.c:234 ../exo/exo-mount-point.c:392
+#: ../exo/exo-gdk-pixbuf-extensions.c:770 ../exo/exo-mount-point.c:208
+#: ../exo/exo-mount-point.c:237 ../exo/exo-mount-point.c:425
 #, c-format
 msgid "Failed to open file \"%s\": %s"
 msgstr "Tiedoston \"%s\" avaaminen epäonnistui: %s"
@@ -829,7 +829,7 @@ msgstr "Audio-CD"
 #: ../exo-hal/exo-hal.c:802
 #, c-format
 msgid "%s Removable Volume"
-msgstr "Irotettava taltio %s"
+msgstr "Irrotettava taltio %s"
 
 #: ../exo-hal/exo-hal.c:804
 #, c-format
@@ -975,7 +975,7 @@ msgstr "_Muu..."
 
 #: ../exo-helper/exo-helper-chooser.c:794
 msgid "Use a custom application which is not included in the above list."
-msgstr "Valitse mukautettu sovellus, jota ei löyty yläpuoliselta listalta."
+msgstr "Valitse mukautettu sovellus, jota ei löydy yläpuoliselta listalta."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:141
 msgid "Choose Preferred Application"
@@ -1087,11 +1087,11 @@ msgstr "Konqueror web-selain"
 
 #: ../exo-helper/helpers/links.desktop.in.in.h:1
 msgid "Links Text Browser"
-msgstr "Links -tekstiselain"
+msgstr "Links-tekstiselain"
 
 #: ../exo-helper/helpers/lynx.desktop.in.in.h:1
 msgid "Lynx Text Browser"
-msgstr "Lynx -tekstiselain"
+msgstr "Lynx-tekstiselain"
 
 #: ../exo-helper/helpers/mozilla-browser.desktop.in.in.h:1
 msgid "Mozilla Browser"
@@ -1099,7 +1099,7 @@ msgstr "Mozilla-selain"
 
 #: ../exo-helper/helpers/mozilla-mailer.desktop.in.in.h:1
 msgid "Mozilla Mail"
-msgstr "Mozilla sähköposti"
+msgstr "Mozillan sähköposti"
 
 #: ../exo-helper/helpers/mutt.desktop.in.in.h:1
 msgid "Mutt"
@@ -1119,12 +1119,11 @@ msgstr "Opera-selain"
 
 #: ../exo-helper/helpers/opera-mailer.desktop.in.in.h:1
 msgid "Opera Mail"
-msgstr "Opera sähköposti"
+msgstr "Operan sähköposti"
 
 #: ../exo-helper/helpers/sylpheed-claws.desktop.in.in.h:1
-#, fuzzy
 msgid "Claws Mail"
-msgstr "Mozilla sähköposti"
+msgstr "Claws-sähköposti"
 
 #: ../exo-helper/helpers/sylpheed.desktop.in.in.h:1
 msgid "Sylpheed"
