--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-28  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
+
+	* fi.po: Fixed some typos reported by Jarno Liimatainen.
+
 2007-04-15  Hydonsingore Cia <hydonsingore@educities.edu.tw>
 
 	* zh_TW.po: File launched, not completed yet.
