2007-05-09	Benedikt Meurer <benny@xfce.org>
	* COPYING.LIB, COPYING, Makefile.am: Ship LGPL and GPL license
	  files. Bug #2895.




(Old svn revision: 25690)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-09	Benedikt Meurer <benny@xfce.org>
+
+	* COPYING.LIB, COPYING, Makefile.am: Ship LGPL and GPL license
+	  files. Bug #2895.
+
 2007-02-17	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-config.h.in: Make sure EXO_PARAM_READABLE,
