2007-05-09	Benedikt Meurer <benny@xfce.org>
	* INSTALL, configure.in.in: Update for latest autoconf.




(Old svn revision: 25693)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-05-09	Benedikt Meurer <benny@xfce.org>
 
+	* INSTALL, configure.in.in: Update for latest autoconf.
+
+2007-05-09	Benedikt Meurer <benny@xfce.org>
+
 	* COPYING.LIB, COPYING, Makefile.am: Ship LGPL and GPL license
 	  files. Bug #2895.
 
