Added the Norwegian Bokmal translations to the libexo, terminal and thunar packages.
(Old svn revision: 25717)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-16  Maximilian Schleiss <maxschleiss@solnet.ch>
+
+	* nb_NO.po: Added the Norwegian Bokmal translation
+	by Terje Uriansrud <ter@operamail.com>
+
 2007-04-28  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
 	* fi.po: Fixed some typos reported by Jarno Liimatainen.
