2007-05-20	Benedikt Meurer <benny@xfce.org>
	* exo-csource/main.c: Add support to strip comments and node contents
	  from XML files. Based on patch from Nick Schermer <nick@xfce.org>.
	  Bug #3094.
	* po/*.po, po/*.pot: Merge new strings.
	* po/de.po: Update german translations.




(Old svn revision: 25727)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-05-20	Benedikt Meurer <benny@xfce.org>
+
+	* exo-csource/main.c: Add support to strip comments and node contents
+	  from XML files. Based on patch from Nick Schermer <nick@xfce.org>.
+	  Bug #3094.
+	* po/*.po, po/*.pot: Merge new strings.
+	* po/de.po: Update german translations.
+
 2007-05-09	Benedikt Meurer <benny@xfce.org>
 
 	* INSTALL, configure.in.in: Update for latest autoconf.
