--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-20  Benedikt Meurer <benny@xfce.org>
+
+	* *.po, *.pot: Merge new strings.
+	* de.po: Update german translations.
+
 2007-05-16  Maximilian Schleiss <maxschleiss@solnet.ch>
 
 	* nb_NO.po: Added the Norwegian Bokmal translation
