2007-05-22	Benedikt Meurer <benny@xfce.org>
	* configure.in.in: Prefer -lmd over -lmd5.
	* docs/reference/: Update reference manual.




(Old svn revision: 25739)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-22	Benedikt Meurer <benny@xfce.org>
+
+	* configure.in.in: Prefer -lmd over -lmd5.
+	* docs/reference/: Update reference manual.
+
 2007-05-20	Benedikt Meurer <benny@xfce.org>
 
 	* exo-csource/main.c: Add support to strip comments and node contents
