Updated the Brazilian Portuguese translations of the libexo, mousepad, xfce-utils, xfce4-panel and xfmedia also in Portuguese.
(Old svn revision: 25791)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-09  Maximilian Schleiss <maximilian@xfce.org>
+
+	* pt_BR.po: Updated the Brazilian Portuguese translation
+	by Pablo Lerina <pabloalr@gmail.com>
+
 2007-06-05  Maximilian Schleiss <maximilian@xfce.org>
 
 	* pt_BR.po: Updated the Brazilian Portuguese translation
